samples/_failures_safe/1761312778_4c72ee_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_573c47d7.c: In function ‘main’:
./samples/SAFE/__tmp_573c47d7.c:155:12: error: missing terminating " character
  155 |     printf("\nAvailable operations
      |            ^~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_573c47d7.c:155:5: error: expected expression at end of input
  155 |     printf("\nAvailable operations
      |     ^~~~~~
./samples/SAFE/__tmp_573c47d7.c:155:5: error: expected declaration or statement at end of input
